@@ -1,0 +1,10 @@
+{
+"biomes":  [[0, 0, 0, 0, 1, 1, 1, 1],
+            [0, 0, 0, 0, 1, 1, 1, 1],
+            [0, 0, 0, 4, 4, 1, 1, 1],
+            [0, 0, 4, 4, 4, 4, 1, 1],
+            [2, 2, 4, 4, 4, 4, 3, 3],
+            [2, 2, 2, 4, 4, 3, 3, 3],
+            [2, 2, 2, 2, 3, 3, 3, 3],
+            [2, 2, 2, 2, 3, 3, 3, 3]]
+}
