@@ -1,0 +1,10 @@
+{
+"biomes":  [[4, 5, 5, 5, 6, 6, 6, 7],
+            [4, 5, 5, 5, 6, 6, 6, 7],
+            [4, 5, 5, 5, 5, 6, 6, 7],
+            [4, 5, 5, 5, 5, 6, 6, 7],
+            [4, 4, 3, 3, 3, 6, 7, 7],
+            [4, 4, 3, 3, 3, 6, 7, 7],
+            [4, 4, 3, 3, 3, 6, 7, 7],
+            [4, 4, 3, 3, 3, 6, 7, 7]]
+}
